--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,44 @@
 
 body {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  font-size: 2rem;
+}
+
+button {
+  cursor: pointer;
+}
+
+#item-form {
+  display: flex;
+  flex-direction: column;
+}
+
+#item-form > * {
+  margin: 0.15rem;
+}
+
+#list {
+  padding: 0;
+}
+
+.list-item {
+  list-style: none;
+}
+
+.list-item-label:hover {
+  cursor: pointer;
+}
+
+.list-item-label:hover > [data-list-item-question] {
+  color: #222;
+  text-decoration: line-through;
+}
+
+[data-button-delete] {
+  margin-left: 0.5rem;
 }
