--- a/styles.css
+++ b/styles.css
@@ -2,25 +2,61 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  font-family: Libre Baskerville, sans-serif;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  background-image: url("carriergoose.jpeg");
+  position: relative;
+
+  background-size: 1440px 1620px;
+  background-position: 100% 55%;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  z-index: -1;
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  position: absolute;
+  left: 40%;
+  top: 17%;
+
   min-height: 100vh;
   margin: 0;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
-button {
-  cursor: pointer;
+#container {
+  width: 500px;
+  position: absolute;
+  top: 35%;
+  text-align: center;
+
+  background-color: transparent;
+  height: 200px;
+  width: 300px;
+  z-index: 0;
 }
 
-#item-form {
-  display: flex;
-  flex-direction: column;
+#list-guide {
+  position: absolute;
+  bottom: 105%;
+  left: -32%;
+  background-color: transparent;
+  width: 500px;
+  height: 225px;
+  overflow: scroll;
+  color: white;
+  border-top: 10px;
+  margin: 5px;
+}
+
+.input {
+  width: 250px;
 }
 
 #item-form > * {
@@ -29,21 +65,96 @@ button {
 
 #list {
   padding: 0;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .list-item {
   list-style: none;
+  margin: 8px;
 }
 
-.list-item-label:hover {
+.button {
+  transition-duration: 0.4;
+  cursor: pointer;
+  border: none;
   cursor: pointer;
 }
 
-.list-item-label:hover > [data-list-item-question] {
-  color: #222;
-  text-decoration: line-through;
+[data-button-delete] {
+  margin-left: 0.75rem;
+  width: 32px;
+  height: 32px;
+  opacity: 0.5;
+  font-size: 1rem;
+  background-color: transparent;
+  border: none;
 }
 
-[data-button-delete] {
-  margin-left: 0.5rem;
+[data-button-delete]:hover,
+#add-button:hover,
+#send-button:hover,
+#quiz-button:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+#add-button,
+#quiz-button,
+#send-button {
+  font-size: 1rem;
+  text-align: center;
+  background-color: pink;
+  opacity: 0.5;
+}
+
+.input {
+  border-color: rgb(126, 101, 152);
+  border-radius: 0.3rem;
+  height: 25px;
+  width: 220px;
+  color: purple;
+  background-color: white;
+  opacity: 0.5;
+}
+
+.input.qa {
+  background-color: rgb(126, 101, 152);
+  width: 300px;
+  color: purple;
+  background-color: white;
+}
+
+nav {
+  position: absolute;
+  left: 0%;
+  bottom: 0%;
+  color: white;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1rem;
+  height: 40px;
+  width: 500px;
+}
+
+.nav-list {
+  display: flex;
+  margin: 0;
+  list-style: none;
+  align-items: flex-start;
+}
+
+.link {
+  padding: 0.5rem;
+}
+
+.link:hover,
+.link:focus {
+  background-color: rgb(21, 18, 45);
+  color: #777;
+}
+
+.link a {
+  color: inherit;
+  text-decoration: none;
 }
