--- a/styles.css
+++ b/styles.css
@@ -42,38 +42,6 @@ body {
   z-index: 0;
 }
 
-#list-guide {
-  position: absolute;
-  bottom: 105%;
-  left: -32%;
-  background-color: transparent;
-  width: 500px;
-  height: 225px;
-  overflow: scroll;
-  color: white;
-  border-top: 10px;
-  margin: 5px;
-}
-
-.input {
-  width: 250px;
-}
-
-#item-form > * {
-  margin: 0.15rem;
-}
-
-#list {
-  padding: 0;
-  display: flex;
-  flex-direction: column-reverse;
-}
-
-.list-item {
-  list-style: none;
-  margin: 8px;
-}
-
 .button {
   transition-duration: 0.4;
   cursor: pointer;
@@ -104,16 +72,25 @@ body {
 #send-button {
   font-size: 1rem;
   text-align: center;
-  background-color: pink;
-  opacity: 0.5;
+  background-color: white;
+  opacity: 0.7;
+  border-radius: 0.2rem;
+  height: 25px;
+  width: 25px;
+  margin-top: 0px;
+}
+
+#send-icon {
+  margin-top: 4px;
 }
 
 .input {
   border-color: rgb(126, 101, 152);
-  border-radius: 0.3rem;
+  border-radius: 1rem;
+  padding: 15px;
   height: 25px;
-  width: 220px;
-  color: purple;
+  width: 180px;
+  color: grey;
   background-color: white;
   opacity: 0.5;
 }
@@ -121,8 +98,52 @@ body {
 .input.qa {
   background-color: rgb(126, 101, 152);
   width: 300px;
-  color: purple;
+  color: grey;
   background-color: white;
+}
+
+#item-form > * {
+  margin: 0.15rem;
+}
+
+.link {
+  padding: 0.5rem;
+}
+
+.link:hover,
+.link:focus {
+  background-color: rgb(21, 18, 45);
+  color: #777;
+}
+
+.link a {
+  color: inherit;
+  text-decoration: none;
+}
+
+#list-guide {
+  position: absolute;
+  bottom: 105%;
+  left: -32%;
+  background-color: transparent;
+  width: 500px;
+  height: 225px;
+  overflow: scroll;
+  color: white;
+  border-top: 10px;
+  margin: 5px;
+}
+
+#list {
+  padding: 0;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.list-item {
+  list-style: none;
+  margin: 8px;
+  opacity: 0.7;
 }
 
 nav {
@@ -144,17 +165,6 @@ nav {
   align-items: flex-start;
 }
 
-.link {
-  padding: 0.5rem;
-}
-
-.link:hover,
-.link:focus {
-  background-color: rgb(21, 18, 45);
-  color: #777;
-}
-
-.link a {
-  color: inherit;
-  text-decoration: none;
+.question-item {
+  margin-right: 50px;
 }
