--- a/styles.css
+++ b/styles.css
@@ -10,20 +10,16 @@
 }
 
 html {
-  background-image: url("carriergoose.jpeg");
-  position: relative;
-
-  background-size: 1440px 1620px;
-  background-position: 100% 55%;
+  background-image: url("carriergoose-main.jpeg");
+  background-size: cover;
+  height: 100vh;
   background-repeat: no-repeat;
-  overflow: hidden;
-  z-index: -1;
+  background-position: center;
 }
 
 body {
-  position: absolute;
-  left: 40%;
-  top: 17%;
+  display: flex;
+  justify-content: center;
 
   min-height: 100vh;
   margin: 0;
@@ -31,15 +27,22 @@ body {
 }
 
 #container {
-  width: 500px;
-  position: absolute;
-  top: 35%;
   text-align: center;
-
   background-color: transparent;
-  height: 200px;
-  width: 300px;
+  height: 300px;
+  width: 500px;
   z-index: 0;
+}
+
+#list-guide {
+  background-color: transparent;
+  width: 500px;
+  height: 300px;
+  overflow: scroll;
+  color: white;
+  border-top: 10px;
+  margin: 5px;
+  margin-bottom: 20px;
 }
 
 .button {
@@ -80,6 +83,10 @@ body {
   margin-top: 0px;
 }
 
+#invisible-button {
+  visibility: hidden;
+}
+
 #send-icon {
   margin-top: 4px;
 }
@@ -92,7 +99,7 @@ body {
   width: 180px;
   color: grey;
   background-color: white;
-  opacity: 0.5;
+  opacity: 0.85;
 }
 
 .input.qa {
@@ -112,26 +119,12 @@ body {
 
 .link:hover,
 .link:focus {
-  background-color: rgb(21, 18, 45);
   color: #777;
 }
 
 .link a {
   color: inherit;
   text-decoration: none;
-}
-
-#list-guide {
-  position: absolute;
-  bottom: 105%;
-  left: -32%;
-  background-color: transparent;
-  width: 500px;
-  height: 225px;
-  overflow: scroll;
-  color: white;
-  border-top: 10px;
-  margin: 5px;
 }
 
 #list {
@@ -161,8 +154,13 @@ nav {
 .nav-list {
   display: flex;
   margin: 0;
+  padding: 0;
   list-style: none;
   align-items: flex-start;
+}
+
+.nav-list a {
+  margin-left: 1.5rem;
 }
 
 .question-item {
