--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/stylesheets/main.css" />
-  <script defer src="script.js"></script>
+  <link rel="stylesheet" href="/stylesheets/styles.css" />
+  <script defer src="/javascripts/script.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
       <div id="fourth-row">
         <input class="input" id="phone-number" type="tel" onInput="this.value = phoneFormat(this.value)" placeholder="Phone Number" />
         <button class="button" id="send-button">
-          <img id=send-icon src="send2.png" style="width:15px;height:15px" />
+          <img id=send-icon src="/images/send2.png" style="width:15px;height:15px" />
         </button>
       </div>
     </form>
