--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,27 @@
   display: none;
 }
 
-html {
-  background-image: url("carriergoose-main.jpeg");
+/* #about-page {
+  background-image: url("carriergoose-top.jpeg");
   background-size: cover;
   height: 100vh;
+  width: 100vw;
   background-repeat: no-repeat;
-  background-position: center;
+} */
+
+#landing-page {
+  background-image: url("carriergoose.jpeg");
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  display: flex;
+  justify-content: center;
+  overflow-y: hidden;
 }
 
 body {
-  display: flex;
-  justify-content: center;
-
-  min-height: 100vh;
   margin: 0;
   font-size: 1.5rem;
 }
@@ -37,7 +45,7 @@ body {
 #list-guide {
   background-color: transparent;
   width: 500px;
-  height: 300px;
+  height: 260px;
   overflow: scroll;
   color: white;
   border-top: 10px;
@@ -136,7 +144,7 @@ body {
 .list-item {
   list-style: none;
   margin: 8px;
-  opacity: 0.7;
+  opacity: 0.95;
 }
 
 nav {
