Initial implementation of Twilio API in ExpressJS web app

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,55 +21,56 @@
         <div id="list-guide">
           <ul id="list"></ul>
         </div>
-        <form id="item-form" autocomplete="off">
-          <div id="first-row">
-            <input
-              class="input qa"
-              id="question"
-              type="text"
-              placeholder="Question"
-            />
-            <button disabled id="invisible-button">+</button>
-          </div>
+        <form id="item-form" method="POST" autocomplete="off">
+          <input
+            class="input qa"
+            id="question"
+            type="text"
+            placeholder="Question"
+            name="questions"
+          />
+          <button disabled id="invisible-button">+</button>
 
-          <div id="second-row">
-            <input
-              class="input qa"
-              id="answer"
-              type="text"
-              placeholder="Answer"
-            />
-            <button class="button" id="add-button">+</button>
-          </div>
+          <input
+            class="input qa"
+            id="answer"
+            type="text"
+            placeholder="Answer"
+            name="answers"
+          />
+          <button type="submit" class="button" id="add-button">+</button>
         </form>
 
-        <form id="quiz-form" autocomplete="off">
-          <div id="third-row">
-            <input
-              class="input"
-              id="quiz-input"
-              type="text"
-              placeholder="Brainscape Link"
-            />
-            <button class="button" id="quiz-button">
-              <img id="brainscape-logo" src="/images/brainscapelogo.png" />
-            </button>
-          </div>
+        <form id="quiz-form" method="POST" autocomplete="off">
+          <input
+            class="input"
+            id="quiz-input"
+            type="text"
+            name="brainscape"
+            placeholder="Brainscape Link"
+          />
+          <button type="submit" class="button" id="quiz-button">
+            <img id="brainscape-logo" src="/images/brainscapelogo.png" />
+          </button>
         </form>
 
-        <form id="number-form" autocomplete="off">
-          <div id="fourth-row">
-            <input
-              class="input"
-              id="phone-number"
-              type="tel"
-              onInput="this.value = phoneFormat(this.value)"
-              placeholder="Phone Number"
-            />
-            <button class="button" id="send-button">
-              <img id="send-icon" src="/images/send2.png" />
-            </button>
-          </div>
+        <form id="number-form" method="POST" autocomplete="off">
+          <input
+            class="input"
+            id="phone-number"
+            type="tel"
+            onInput="this.value = phoneFormat(this.value)"
+            placeholder="Phone Number"
+            name="number"
+          />
+          <button
+            type="submit"
+            name="send-button"
+            class="button"
+            id="send-button"
+          >
+            <img id="send-icon" src="/images/send2.png" />
+          </button>
         </form>
       </div>
 
