--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,12 @@
     </div>
     <form id="item-form" autocomplete="off">
       <div id="first-row">
-        <input class="input qa" id="question" type="text" placeholder="Question" />
+        <input
+          class="input qa"
+          id="question"
+          type="text"
+          placeholder="Question"
+        />
         <button disabled id="invisible-button">+</button>
       </div>
 
@@ -17,17 +22,28 @@
 
     <form id="quiz-form" autocomplete="off">
       <div id="third-row">
-        <input class="input" id="quiz-input" type="text" placeholder="Brainscape Link" />
+        <input
+          class="input"
+          id="quiz-input"
+          type="text"
+          placeholder="Brainscape Link"
+        />
         <button class="button" id="quiz-button">
           <img id="brainscape-logo" src="/images/brainscapelogo.png" />
         </button>
       </div>
     </form>
 
-    <form id="number-form" autocomplete="off">
+    <form id="number-form" method="POST" autocomplete="off">
       <div id="fourth-row">
-        <input class="input" id="phone-number" type="tel" onInput="this.value = phoneFormat(this.value)"
-          placeholder="Phone Number" />
+        <input
+          class="input"
+          id="phone-number"
+          type="tel"
+          name="number"
+          onInput="this.value = phoneFormat(this.value)"
+          placeholder="Phone Number"
+        />
         <button class="button" id="send-button">
           <img id="send-icon" src="/images/send2.png" />
         </button>
