--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,6 +40,7 @@
           class="input"
           id="phone-number"
           type="tel"
+          name="number"
           onInput="this.value = phoneFormat(this.value)"
           placeholder="Phone Number"
         />
