--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,36 +6,17 @@
     <form id="item-form" autocomplete="off">
       <div id="first-row">
         <input
-          class="input qa"
-          id="question"
+          class="input"
+          id="todo"
           type="text"
-          placeholder="Question"
+          placeholder="Enter Todo Item"
         />
-        <button disabled id="invisible-button">+</button>
-      </div>
-
-      <div id="second-row">
-        <input class="input qa" id="answer" type="text" placeholder="Answer" />
         <button class="button" id="add-button">+</button>
       </div>
     </form>
 
-    <form id="quiz-form" autocomplete="off">
-      <div id="third-row">
-        <input
-          class="input"
-          id="quiz-input"
-          type="text"
-          placeholder="Brainscape Link"
-        />
-        <button class="button" id="quiz-button">
-          <img id="brainscape-logo" src="/images/brainscapelogo.png" />
-        </button>
-      </div>
-    </form>
-
     <form id="number-form" method="POST" autocomplete="off">
-      <div id="fourth-row">
+      <div id="second-row">
         <input
           class="input"
           id="phone-number"
@@ -54,17 +35,9 @@
   <template id="list-item-template">
     <li class="list-item">
       <label class="list-item-label">
-        <span class="question-item" data-list-item-question></span>
-        <span class="answer-item" data-list-item-answer></span>
+        <span class="input-item" data-list-item-input></span>
       </label>
       <button data-button-delete>❌</button>
     </li>
   </template>
 </div>
-
-<nav>
-  <ul class="nav-list">
-    <li class="link"><a href="#">How it works</a></li>
-    <li class="link"><a href="#">Why it works</a></li>
-  </ul>
-</nav>
