--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" href="images/goose.png" />
+    <link rel="apple-touch-icon" sizes="128x128" href="images/goose.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
       rel="stylesheet"
