Add full functionality to POST requests and sendMessage()

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
       </div>
     </form>
 
-    <form id="number-form" method="POST" autocomplete="off">
+    <form id="number-form" method="POST" action="/" autocomplete="off">
       <div id="second-row">
         <input
           class="input"
